# os-twin

./: .env.example  .gitignore  .pester.ps1  CLAUDE.md  CONTRIBUTE.md  Dockerfile  PLAN.md  PLAN.template.md  PR.md  README.md  RELEASE_NOTES.md  TODO.md  coverage.xml  cypress.config.js  git_script.py  hello.py  implementation_plan.md  index.html  ostwin-flow-light.html  package-lock.json  package.json  pnpm-lock.yaml  provider_urls.json  run_lint.py  run_pytest.py  run_pytest_qa.py  run_pytest_temp.py  start-backend.sh  start-frontend.sh  test-dynamic-roles-plan.md  vigolium-report.html
dashboard/: .coverage  .geminiignore  .gitignore  GEMINI.md  PLAN-DASHBOARD.md  PLAN-GROWTH.md  PLAN.md  QA.md  TASKS.md  TODO.md  agent_bridge.py  api.py  api_trigger.py  api_utils.py  asset_store.py  auth.py  bot_manager.py  command_dispatcher.py  conduct-plan.md  connector_utils.py  constants.py  create_client_patch.py  debug_routes.py  deploy_completion.py  deploy_preview.py  e2e_simulation.py  env_watcher.py  epic_manager.py  frontend_fallback.py  global_state.py  index.html  llm_client.py  llm_wrapper.py  load_test.py  manual_probe.py  master_agent.py  models.py  notification_dispatcher.py  notify.py  opencode_commands_data.py  (+55 more)
dashboard/PRD/: Enterprise Command Center PRD.docx  dashboard-v2-wireframe.md
dashboard/agentic_memory/: config.default.json  config.py  knowledge_link.py  memory_llm.py  memory_note.py  memory_pool.py  memory_system.py  retrievers.py
dashboard/ai/: __init__.py  completion.py  config.py  errors.py  monitor.py  retry.py
dashboard/assets/: app.js  main.css
dashboard/chat_adapters/: __init__.py  base.py  discord.py  registry.py  slack.py  telegram.py
dashboard/connectors/: __init__.py  base.py  intercom.py  models.py  obsidian.py  utils.py
dashboard/docs/: knowledge-architecture.md  knowledge-mcp-opencode.md  knowledge-mcp.plan.md  knowledge.md
dashboard/fe/: .gitignore  NEXUS_REFACTOR_PLAN.md  README.md  TASKS.md  bun.lockb  e2e_results.txt  fix_colors.py  fix_colors_2.py  mockup.html  next.config.ts  package-lock.json  package.json  patch.js  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  test_output.txt  tsconfig.json  unit_results.txt  vitest.config.ts
dashboard/knowledge/: __init__.py  audit.py  backup.py  bridge.py  chunking.py  config.py  embeddings.py  ingestion.py  jobs.py  knowledge_link.py  llm.py  mcp_server.py  metrics.py  namespace.py  (+4 more)
(+2640 files in other folders)
